contracts/eosiolib/db.h

/**
 *  @defgroup database Database API
 *  @brief Defines APIs that store and retrieve data on the blockchain
 *  @ingroup contractdev
 *
 *  @defgroup databasecpp Database C++ API
 *  @brief Defines an interface to EOSIO database
 *  @ingroup database
 *
 *  @details
 *  EOSIO organizes data according to the following broad structure:
 *  - **code** - the account name which has write permission
 *     - **scope** - an area where the data is stored
 *        - **table** - a name for the table that is being stored
 *           - **record** - a row in the table
 */

/**
 *  @defgroup databasec Database C API
 *  @brief Defines %C APIs for interfacing with the database.
 *  @ingroup database
 *
 *  @details Database C API provides low level interface to EOSIO database.
 *
 *  @section tabletypes Supported Table Types
 *  Following are the table types supported by the C API:
 *  1. Primary Table
 *    - 64-bit integer key
 *  2. Secondary Index Table
 *    - 64-bit integer key
 *    - 128-bit integer key
 *    - 256-bit integer key
 *    - double key
 *    - long double key
 *  @{
 */

/**
  *
  *  Store a record in a primary 64-bit integer index table
  *
  *  @brief Store a record in a primary 64-bit integer index table
  *  @param scope - The scope where the table resides (implied to be within the code of the current receiver)
  *  @param table - The table name
  *  @param payer - The account that pays for the storage costs
  *  @param id - ID of the entry
  *  @param data - Record to store
  *  @param len - Size of data
  *  @pre `data` is a valid pointer to a range of memory at least `len` bytes long
  *  @pre `*((uint64_t*)data)` stores the primary key
  *  @return iterator to the newly created table row
  *  @post a new entry is created in the table
  */
int32_t db_store_i64(account_name scope, table_name table, account_name payer, uint64_t id,  const void* data, uint32_t len);
void db_update_i64(int32_t iterator, account_name payer, const void* data, uint32_t len);
/**
  *
  *  Remove a record from a primary 64-bit integer index table
  *
  *  @brief Remove a record from a primary 64-bit integer index table
  *  @param iterator - Iterator to the table row to remove
  *  @pre `iterator` points to an existing table row in the table
  *  @post the table row pointed to by `iterator` is removed and the associated storage costs are refunded to the payer
  *
  *  Example:
  *
  *  @code
  *  int32_t itr = db_find_i64(receiver, receiver, table1, N(alice));
  *  eosio_assert(itr >= 0, "Alice cannot be removed since she was already not found in the table");
  *  db_remove_i64(itr);
  *  @endcode
  */
void db_remove_i64(int32_t iterator);
/**
  *
  *  Get a record in a primary 64-bit integer index table
  *
  *  @brief Get a record in a primary 64-bit integer index table
  *  @param iterator - The iterator to the table row containing the record to retrieve
  *  @param data - Pointer to the buffer which will be filled with the retrieved record
  *  @param len - Size of the buffer
  *  @return size of the data copied into the buffer if `len > 0`, or size of the retrieved record if `len == 0`.
  *  @pre `iterator` points to an existing table row in the table
  *  @pre `data` is a valid pointer to a range of memory at least `len` bytes long
  *  @post `data` will be filled with the retrieved record (truncated to the first `len` bytes if necessary)
  *
  *  Example:
  *
  *  @code
  *  char value[50];
  *  auto len = db_get_i64(itr, value, 0);
  *  eosio_assert(len <= 50, "buffer to small to store retrieved record");
  *  db_get_i64(itr, value, len);
  *  @endcode
  */
int32_t db_get_i64(int32_t iterator, void* data, uint32_t len);
/**
  *
  *  Find the table row following the referenced table row in a primary 64-bit integer index table
  *
  *  @brief Find the table row following the referenced table row in a primary 64-bit integer index table
  *  @param iterator - The iterator to the referenced table row
  *  @param primary - Pointer to a `uint64_t` variable which will have its value set to the primary key of the next table row
  *  @return iterator to the table row following the referenced table row (or the end iterator of the table if the referenced table row is the last one in the table)
  *  @pre `iterator` points to an existing table row in the table
  *  @post `*primary` will be replaced with the primary key of the table row following the referenced table row if it exists, otherwise `*primary` will be left untouched
  *
  *  Example:
  *
  *  @code
  *  int32_t charlie_itr = db_find_i64(receiver, receiver, table1, N(charlie));
  *  // expect nothing after charlie
  *  uint64_t prim = 0
  *  int32_t  end_itr = db_next_i64(charlie_itr, &prim);
  *  eosio_assert(end_itr < -1, "Charlie was not the last entry in the table");
  *  @endcode
  */
int32_t db_next_i64(int32_t iterator, uint64_t* primary);
/**
  *
  *  Find the table row preceding the referenced table row in a primary 64-bit integer index table
  *
  *  @brief Find the table row preceding the referenced table row in a primary 64-bit integer index table
  *  @param iterator - The iterator to the referenced table row
  *  @param primary - Pointer to a `uint64_t` variable which will have its value set to the primary key of the previous table row
  *  @return iterator to the table row preceding the referenced table row assuming one exists (it will return -1 if the referenced table row is the first one in the table)
  *  @pre `iterator` points to an existing table row in the table or it is the end iterator of the table
  *  @post `*primary` will be replaced with the primary key of the table row preceding the referenced table row if it exists, otherwise `*primary` will be left untouched
  *
  *  Example:
  *
  *  @code
  *  uint64_t prim = 0;
  *  int32_t  itr_prev = db_previous_i64(itr, &prim);
  *  @endcode
  */
int32_t db_previous_i64(int32_t iterator, uint64_t* primary);
/**
  *
  *  Find a table row in a primary 64-bit integer index table by primary key
  *
  *  @brief Find a table row in a primary 64-bit integer index table by primary key
  *  @param code - The name of the owner of the table
  *  @param scope - The scope where the table resides
  *  @param table - The table name
  *  @param id - The primary key of the table row to look up
  *  @return iterator to the table row with a primary key equal to `id` or the end iterator of the table if the table row could not be found
  *
  *  Example:
  *
  *  @code
  *  int itr = db_find_i64(receiver, receiver, table1, N(charlie));
  *  @endcode
  */
int32_t db_find_i64(account_name code, account_name scope, table_name table, uint64_t id);
/**
  *
  *  Find the table row in a primary 64-bit integer index table that matches the lowerbound condition for a given primary key
  *  The table row that matches the lowerbound condition is the first table row in the table with the lowest primary key that is >= the given key
  *
  *  @brief Find the table row in a primary 64-bit integer index table that matches the lowerbound condition for a given primary key
  *  @param code - The name of the owner of the table
  *  @param scope - The scope where the table resides
  *  @param table - The table name
  *  @param id - The primary key used to determine the lowerbound
  *  @return iterator to the found table row or the end iterator of the table if the table row could not be found
  */
int32_t db_lowerbound_i64(account_name code, account_name scope, table_name table, uint64_t id);
/**
  *
  *  Find the table row in a primary 64-bit integer index table that matches the upperbound condition for a given primary key
  *  The table row that matches the upperbound condition is the first table row in the table with the lowest primary key that is > the given key
  *
  *  @brief Find the table row in a primary 64-bit integer index table that matches the upperbound condition for a given primary key
  *  @param code - The name of the owner of the table
  *  @param scope - The scope where the table resides
  *  @param table - The table name
  *  @param id - The primary key used to determine the upperbound
  *  @return iterator to the found table row or the end iterator of the table if the table row could not be found
  */
int32_t db_upperbound_i64(account_name code, account_name scope, table_name table, uint64_t id);
/**
  *
  *  Get an iterator representing just-past-the-end of the last table row of a primary 64-bit integer index table
  *
  *  @brief Get an iterator representing just-past-the-end of the last table row of a primary 64-bit integer index table
  *  @param code - The name of the owner of the table
  *  @param scope - The scope where the table resides
  *  @param table - The table name
  *  @return end iterator of the table
  */
int32_t db_end_i64(account_name code, account_name scope, table_name table);